add default-blocky bookmark type option

--- a/src/options.html
+++ b/src/options.html
@@ -671,13 +671,17 @@
         <div class="grid gap-2 text-base">
           <p class="text-white">bookmarks.type</p>
           <div class="grid grid-cols-2 gap-2">
+            <button id="bookmarks-type-user-defined-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">user-defined</span>
+            </button>
             <button id="bookmarks-type-default-button"
               class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
               <span class="text-white">default</span>
             </button>
-            <button id="bookmarks-type-user-defined-button"
+            <button id="bookmarks-type-default-blocky-button"
               class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
-              <span class="text-white">user-defined</span>
+              <span class="text-white">default-blocky</span>
             </button>
             <button id="bookmarks-type-none-button"
               class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
