add default-blocky options

--- a/src/options.html
+++ b/src/options.html
@@ -736,6 +736,29 @@
             </div>
           </div>
         </div>
+        <div id="bookmarks-default-blocky-section">
+          <div class="grid gap-2 text-base">
+            <div class="grid gap-2">
+              <p class="text-white text-base">bookmarks.defaultBlockyCols</p>
+              <div id="bookmarks-default-blocky-cols-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+                <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+                <input id="bookmarks-default-blocky-cols-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500"
+                  placeholder="input number..." />
+              </div>
+            </div>
+            <div class="grid gap-2">
+              <p class="text-white text-base">bookmarks.defaultBlockyColor</p>
+              <div id="bookmarks-default-blocky-color-container"
+                class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+                <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+                <input id="bookmarks-default-blocky-color-input" type="text" autocomplete="off"
+                  class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- save buttons and more -->
