add show bookmark names to option page

--- a/src/options.html
+++ b/src/options.html
@@ -689,6 +689,21 @@
             </button>
           </div>
         </div>
+        <div id="bookmarks-user-defined-or-default-blocky-section">
+          <div class="grid gap-2 text-base">
+            <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+              <p class="text-white text-base">bookmarks.showBookmarkNames</p>
+              <div class="ml-auto">
+                <label class="relative inline-flex items-center cursor-pointer">
+                  <input id="bookmarks-show-bookmark-names-checkbox" type="checkbox" value="" class="sr-only peer" />
+                  <div
+                    class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+                  </div>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
         <div id="bookmarks-user-defined-section">
           <div class="grid gap-2 text-base">
             <div class="grid gap-2">
@@ -759,6 +774,7 @@
             </div>
           </div>
         </div>
+
       </section>
     </main>
     <!-- save buttons and more -->
