add option to change bookmark location (firefox)

--- a/src/options.html
+++ b/src/options.html
@@ -772,9 +772,25 @@
                   class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
               </div>
             </div>
+            <div class="grid gap-2 text-base">
+              <p class="text-white">bookmarks.bookmarksLocationFirefox</p>
+              <div class="grid grid-cols-2 gap-2">
+                <button id="bookmarks-location-firefox-menu-button"
+                  class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                  <span class="text-white">menu</span>
+                </button>
+                <button id="bookmarks-location-firefox-toolbar-button"
+                  class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                  <span class="text-white">toolbar</span>
+                </button>
+                <button id="bookmarks-location-firefox-other-button"
+                  class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                  <span class="text-white">other</span>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
-
       </section>
     </main>
     <!-- save buttons and more -->
