--- a/src/options.html
+++ b/src/options.html
@@ -774,6 +774,7 @@
             </div>
             <div class="grid gap-2 text-base">
               <p class="text-white">bookmarks.bookmarksLocationFirefox</p>
+              <p class="text-neutral-500">(only applies to firefox based browsers)</p>
               <div class="grid grid-cols-2 gap-2">
                 <button id="bookmarks-location-firefox-menu-button"
                   class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
