add corner style to options page

--- a/src/options.html
+++ b/src/options.html
@@ -294,6 +294,19 @@
               class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
           </div>
         </div>
+        <div class="grid gap-2 text-base">
+          <p class="text-white">ui.cornerStyle</p>
+          <div class="grid grid-cols-2 gap-2">
+            <button id="ui-corner-style-sharp-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">sharp</span>
+            </button>
+            <button id="ui-corner-style-round-button"
+              class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+              <span class="text-white">round</span>
+            </button>
+          </div>
+        </div>
         <div class="grid gap-2">
           <p class="text-white text-base">ui.customCSS</p>
           <div id="ui-custom-css-container"
