change corner style

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <p id="message" class="font-message text-white text-center text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <section id="search-section" class="grid grid-flow-row w-full place-items-center gap-2">
         <div id="search-container"
-          class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent opacity-0">
+          class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 corner-style border-2 border-transparent opacity-0">
           <span class="search-search-icon-color font-semibold select-none">->&nbsp;</span>
           <input id="search-input" type="text" autocomplete="off"
             class="font-search outline-none bg-transparent placeholder-color-search">
@@ -28,13 +28,13 @@
       </section>
       <section id="bookmark-search-section" class="grid-flow-row w-full place-items-center gap-2 hidden">
         <div id="bookmark-search-container"
-          class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 rounded-md border-2 border-transparent">
+          class="font-search grid grid-cols-[max-content_auto] text-base md:text-2xl w-full p-1 md:p-2 corner-style border-2 border-transparent">
           <span class="search-bookmark-icon-color font-semibold select-none">//&nbsp;</span>
           <input id="bookmark-search-input" type="text" autocomplete="off"
             class="font-bookmark-search outline-none bg-transparent placeholder-color-bookmark-search">
         </div>
         <div id="bookmarks-search-results-container"
-          class="font-bookmark-search-results rounded-md p-2 w-full grid grid-flow-row gap-2 text-base md:text-2xl"
+          class="font-bookmark-search-results corner-style p-2 w-full grid grid-flow-row gap-2 text-base md:text-2xl"
           selected-index="0">
         </div>
       </section>
