change to import -> import and save

--- a/src/options.html
+++ b/src/options.html
@@ -822,7 +822,7 @@
             <span class="text-white text-base">save & export</span>
           </button>
           <button id="import-button" class="bg-indigo-500 hover:bg-indigo-600 transition p-2 rounded-md cursor-pointer">
-            <span class="text-white text-base">import</span>
+            <span class="text-white text-base">import & save</span>
           </button>
         </div>
         <div class="w-full grid grid-flow-row gap-4 place-items-center">
