--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,8 @@
             class="font-search outline-none bg-transparent placeholder-color-search">
         </div>
         <div id="assistant-container"
-          class="font-bookmark-search-results corner-style p-2 w-full grid grid-flow-row gap-2 text-base md:text-2xl">
+          class="font-search corner-style p-2 w-full hidden grid-flow-row gap-2 text-base md:text-2xl">
         </div>
-
         <div id="bookmarks-container"></div>
       </section>
       <section id="bookmark-search-section" class="grid-flow-row w-full place-items-center gap-2 hidden">
