improve options page

--- a/src/options.html
+++ b/src/options.html
@@ -621,7 +621,9 @@
             </div>
           </div>
           <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
-            <p class="text-white text-base">search.assist.history</p>
+            <p class="text-white text-base">search.assist.history <span
+                class="text-neutral-500 text-base">(experimental)</span>
+            </p>
             <div class="ml-auto">
               <label class="relative inline-flex items-center cursor-pointer">
                 <input id="search-assist-history-checkbox" type="checkbox" value="" class="sr-only peer" />
