add user defined bookmark keys stuff

--- a/src/options.html
+++ b/src/options.html
@@ -776,6 +776,11 @@
               </div>
             </div>
             <div class="grid gap-2 text-base">
+              <p class="text-neutral-500">
+                enabling userDefinedKeys -> makes it so that pressing 1 opens first bookmark, 2 opens second bookmark,
+                and
+                so on
+              </p>
               <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
                 <p class="text-white text-base">bookmarks.userDefinedKeys</p>
                 <div class="ml-auto">
