fix unexpected animations behavior

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body dir="ltr" class="bg-neutral-500 min-h-screen overflow-y-hidden grid place-items-center overflow-x-hidden">
   <div id="wallpaper" class="w-screen h-screen fixed top-0 z-[-1]"></div>
   <div id="content"
-    class="grid place-items-center gap-2 m-padding-bottom w-[95%] md:w-[80%] max-w-[50rem] absolute top-distance left-1/2 -translate-x-1/2">
+    class="grid place-items-center gap-2 m-padding-bottom w-[95%] md:w-[80%] max-w-[50rem] absolute top-distance">
     <div class="grid grid-flow-row w-full place-items-center gap-2 md:gap-4">
       <p id="message" class="font-message text-white text-center text-2xl md:text-4xl lg:text-6xl font-semibold"></p>
       <section id="search-section" class="grid grid-flow-row w-full place-items-center gap-2">
