--- a/src/options.html
+++ b/src/options.html
@@ -667,6 +667,17 @@
               </label>
             </div>
           </div>
+          <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+            <p class="text-white text-base">search.assist.conversions</p>
+            <div class="ml-auto">
+              <label class="relative inline-flex items-center cursor-pointer">
+                <input id="search-assist-conversions-checkbox" type="checkbox" value="" class="sr-only peer" />
+                <div
+                  class="w-11 h-6 peer bg-neutral-800 outline-none rounded-full peer-checked:after:translate-x-full after:content-[''] after:absolute after:top-[3px] after:left-[3px] after:bg-neutral-700 after:border-none after:rounded-full after:h-[1.15rem] after:aspect-square after:transition-all peer-checked:bg-emerald-500 peer-checked:after:bg-white">
+                </div>
+              </label>
+            </div>
+          </div>
       </section>
       <!-- hotkeys -->
       <section class="grid grid-flow-row gap-4">
