add support for gifs to be set as wallpaper (#45)

--- a/src/options.html
+++ b/src/options.html
@@ -233,7 +233,7 @@
               <div class="grid gap-2">
                 <p class="text-white text-base">wallpaper.fileUpload</p>
                 <div class="grid grid-cols-2 gap-2">
-                  <input type="file" id="wallpaper-file-upload-input" accept="image/*"
+                  <input type="file" id="wallpaper-file-upload-input" accept="image/*,video/*"
                     class="bg-cyan-500 hover:bg-cyan-600 transition p-2 rounded-md text-white text-base cursor-pointer w-full" />
                   <button id="wallpaper-file-upload-reset-button"
                     class="w-full bg-rose-500 hover:bg-rose-600 transition p-2 rounded-md cursor-pointer">
