--- a/src/options.html
+++ b/src/options.html
@@ -621,7 +621,7 @@
                 placeholder="E.g https://www.google.com/search?q={}" />
             </div>
           </div>
-          <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
+          <!-- <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
             <p class="text-white text-base">search.assist.history <span
                 class="text-neutral-500 text-base">(experimental)</span>
             </p>
@@ -633,7 +633,7 @@
                 </div>
               </label>
             </div>
-          </div>
+          </div> -->
           <div class="grid grid-cols-[max-content_auto] w-full place-items-center">
             <p class="text-white text-base">search.assist.date</p>
             <div class="ml-auto">
