--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <script src="newtab/scripts/init.ts" type="module" defer></script>
 </head>
 
-<body dir="ltr" class="bg-neutral-500 min-h-screen overflow-y-hidden grid place-items-center overflow-x-hidden">
+<body dir="ltr" class="bg-neutral-500 min-h-screen overflow-y-scroll grid place-items-center overflow-x-hidden">
   <div id="wallpaper" class="w-screen h-screen fixed top-0 z-[-1]"></div>
   <div id="content"
     class="grid place-items-center gap-2 m-padding-bottom w-[95%] md:w-[80%] max-w-[50rem] absolute top-distance">
