--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
       </section>
     </div>
   </div>
+  <div id="options-button-container" class="absolute right-4 bottom-4"></div>
 </body>
 
 </html>
