add option to set bookmarks default favicon source

--- a/src/options.html
+++ b/src/options.html
@@ -917,6 +917,21 @@
             </div>
           </div>
         </div>
+        <div id="bookmarks-default-or-default-blocky-section">
+          <div class="grid gap-2 text-base">
+            <p class="text-white">bookmarks.defaultFaviconSource</p>
+            <div class="grid grid-cols-2 gap-2">
+              <button id="bookmarks-default-favicon-source-google-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">google</span>
+              </button>
+              <button id="bookmarks-default-favicon-source-duckduckgo-button"
+                class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
+                <span class="text-white">duckduckgo</span>
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- save buttons and more -->
