--- a/src/options.html
+++ b/src/options.html
@@ -920,6 +920,7 @@
         <div id="bookmarks-default-or-default-blocky-section">
           <div class="grid gap-2 text-base">
             <p class="text-white">bookmarks.defaultFaviconSource</p>
+            <p class="text-neutral-500 text-base">(determines where bookmark favicons are fetched from)</p>
             <div class="grid grid-cols-2 gap-2">
               <button id="bookmarks-default-favicon-source-google-button"
                 class="bg-neutral-800 hover:bg-neutral-700 py-2 rounded-md outline-none">
