add glass color and blur strength to options

--- a/src/options.html
+++ b/src/options.html
@@ -290,6 +290,27 @@
             </button>
           </div>
         </div>
+        <div id="ui-style-glass-section" class="grid grid-flow-row gap-4">
+          <div class="grid gap-2">
+            <p class="text-white text-base">ui.glassColor</p>
+            <div id="ui-glass-color-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="ui-glass-color-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500" placeholder="input color..." />
+            </div>
+          </div>
+          <div class="grid gap-2">
+            <p class="text-white text-base">ui.blurStrength</p>
+            <div id="ui-blur-strength-container"
+              class="grid grid-cols-[max-content_auto] text-base bg-neutral-800 w-full p-1 rounded-md border-2 border-transparent">
+              <span class="text-pink-500 font-semibold select-none">>&nbsp;</span>
+              <input id="ui-blur-strength-input" type="text" autocomplete="off"
+                class="outline-none bg-transparent text-white placeholder-neutral-500"
+                placeholder="input blur strength..." />
+            </div>
+          </div>
+        </div>
         <div class="grid gap-2">
           <p class="text-white text-base">ui.foregroundColor</p>
           <div id="ui-foreground-color-container"
