--- a/src/popup.html
+++ b/src/popup.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="newtab/styles/tailwind.css" />
+    <link rel="stylesheet" href="popup/popup.css" />
+    <script src="popup/popup.ts" defer></script>
+    <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
+    <title>popup</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="newtab/styles/tailwind.css" />
-  <link rel="stylesheet" href="popup/popup.css" />
-  <script src="popup/popup.ts" defer></script>
-  <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
-  <title>popup</title>
-</head>
-
-<body dir="ltr" class="bg-neutral-900 w-max select-none">
-  <div class="grid grid-flow-row gap-2 place-items-center p-6">
-    <img id="mtab-logo" src="./assets/icon.png" class="w-36 aspect-square" alt="logo">
-    <p class="text-4xl text-white font-semibold">mtab</p>
-    <button id="options-button"
-      class="w-40 bg-emerald-500 hover:bg-emerald-600 duration-300 ease-in-out px-2 py-1 rounded-md cursor-pointer">
-      <span class="text-white text-2xl m-0">options</span>
-    </button>
-  </div>
-</body>
-
+  <body dir="ltr" class="w-max select-none bg-neutral-900">
+    <div class="grid grid-flow-row place-items-center gap-2 p-6">
+      <img id="mtab-logo" src="./assets/icon.png" class="aspect-square w-36" alt="logo" />
+      <p class="text-4xl font-semibold text-white">mtab</p>
+      <button
+        id="options-button"
+        class="w-40 cursor-pointer rounded-md bg-emerald-500 px-2 py-1 duration-300 ease-in-out hover:bg-emerald-600"
+      >
+        <span class="m-0 text-2xl text-white">options</span>
+      </button>
+    </div>
+  </body>
 </html>
